[package]
name = "unistring"
version = "0.1.0"
authors = ["Andrew <andrew@egeler.us>"]
edition = "2018"
license = "LGPL-3.0-or-later"
keywords = ["unicode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
