[package]
name = "unistring"
version = "0.1.1"
authors = ["Andrew <andrew@egeler.us>"]
edition = "2018"
description = "Helper functions for unicode in a terminal/monospace environment"
repository = "https://github.com/retupmoca/unistring-rs"
license = "MPL-2.0"
keywords = ["unicode"]

links = "unistring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
